data/all_generated_tests/raw_wast_tests/block_EdgeCaseFailuresinbr_table_23.wast
;; 4. Test with a `block` with a `br_table` using indices pointing to mixed valid and invalid labels:    - A `block` with a `br_table` where the branching table includes indices to valid labels and one invalid label.    - Specific Constraint: Ensures that valid entries resolve correctly while handling errors for invalid entries.    - Edge Case: Confirms that valid indices are correctly decoded despite the presence of invalid indices.

(assert_invalid
  (module (func (result i32)
    (block (result i32) 
      (br_table 0 1 0 (i32.const 1)) 
      (i32.const 0)
    )
  ))
  "type mismatch"
)